--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -660,7 +660,7 @@ th {
   list-style: none;
 }
 
-.clearfix:after, .addPropertyFormContainer .property-add .layout.add:after, #header:after {
+.clearfix:after, #header:after {
   content: '';
   display: block;
   clear: both;
@@ -1145,26 +1145,6 @@ input[type='submit'] {
 }
 
 @media (max-width: 1023px) {
-  .sideBar-active .addPropertyFormContainer select,
-  .sideBar-active .addPropertyFormContainer input[type="text"],
-  .sideBar-active .addPropertyFormContainer input[type="search"],
-  .sideBar-active .addPropertyFormContainer input[type="number"],
-  .sideBar-active .addPropertyFormContainer input[type="email"] {
-    max-width: 115px !important;
-  }
-}
-
-@media (max-width: 767px) {
-  .sideBar-active .addPropertyFormContainer select,
-  .sideBar-active .addPropertyFormContainer input[type="text"],
-  .sideBar-active .addPropertyFormContainer input[type="search"],
-  .sideBar-active .addPropertyFormContainer input[type="number"],
-  .sideBar-active .addPropertyFormContainer input[type="email"] {
-    max-width: inherit !important;
-  }
-}
-
-@media (max-width: 1023px) {
   .sideBar-active .addPropertyFormContainer textarea {
     max-width: 350px !important;
   }
@@ -1486,51 +1466,10 @@ input[type='submit'] {
   line-height: 15px;
   width: 100%;
   height: 30px;
-  max-width: 235px;
-  margin: 0 0 0 10px;
+  width: 100%;
+  display: block;
   padding: 6px 10px;
   outline: none;
-}
-
-@media (max-width: 1599px) {
-  .addPropertyFormContainer .property-add select,
-  .addPropertyFormContainer .property-add input[type="text"],
-  .addPropertyFormContainer .property-add input[type="search"],
-  .addPropertyFormContainer .property-add input[type="number"],
-  .addPropertyFormContainer .property-add input[type="email"] {
-    max-width: 225px;
-  }
-}
-
-@media (max-width: 1199px) {
-  .addPropertyFormContainer .property-add select,
-  .addPropertyFormContainer .property-add input[type="text"],
-  .addPropertyFormContainer .property-add input[type="search"],
-  .addPropertyFormContainer .property-add input[type="number"],
-  .addPropertyFormContainer .property-add input[type="email"] {
-    max-width: 185px;
-  }
-}
-
-@media (max-width: 1023px) {
-  .addPropertyFormContainer .property-add select,
-  .addPropertyFormContainer .property-add input[type="text"],
-  .addPropertyFormContainer .property-add input[type="search"],
-  .addPropertyFormContainer .property-add input[type="number"],
-  .addPropertyFormContainer .property-add input[type="email"] {
-    max-width: 245px;
-  }
-}
-
-@media (max-width: 767px) {
-  .addPropertyFormContainer .property-add select,
-  .addPropertyFormContainer .property-add input[type="text"],
-  .addPropertyFormContainer .property-add input[type="search"],
-  .addPropertyFormContainer .property-add input[type="number"],
-  .addPropertyFormContainer .property-add input[type="email"] {
-    max-width: inherit;
-    margin: 0;
-  }
 }
 
 .addPropertyFormContainer .property-add select:focus, .addPropertyFormContainer .property-add select:hover,
@@ -1616,10 +1555,8 @@ input[type='submit'] {
 .addPropertyFormContainer .property-add textarea {
   font-size: 12px;
   line-height: 15px;
-  margin: 0 0 0 9px;
   width: 100%;
   height: 120px;
-  max-width: 680px;
   resize: none;
   padding: 10px;
 }
@@ -1692,6 +1629,7 @@ input[type='submit'] {
 .addPropertyFormContainer .property-add .input-holder {
   float: left;
   width: 75%;
+  padding: 0 0 0 5px;
 }
 
 @media (max-width: 767px) {
@@ -1891,8 +1829,6 @@ input[type='submit'] {
 .addPropertyFormContainer .property-add .layout.add {
   max-width: 885px;
   margin: 0 auto;
-  overflow: visible;
-  clear: both;
 }
 
 @media (max-width: 1023px) {
@@ -1912,6 +1848,7 @@ input[type='submit'] {
 .addPropertyFormContainer .property-add .layout-holder {
   float: left;
   width: 50%;
+  padding: 0 5px;
   margin: 0 auto 5px;
 }
 
@@ -1940,58 +1877,48 @@ input[type='submit'] {
 }
 
 .addPropertyFormContainer .property-add .layout-holder select {
-  margin: 0 0 0 9px;
   height: 30px;
-  width: 262px;
-}
-
-@media (max-width: 1199px) {
-  .addPropertyFormContainer .property-add .layout-holder select {
-    width: 186px;
-  }
-}
-
-@media (max-width: 1023px) {
-  .addPropertyFormContainer .property-add .layout-holder select {
-    width: 245px;
-  }
-}
-
-@media (max-width: 767px) {
-  .addPropertyFormContainer .property-add .layout-holder select {
-    width: 100%;
-    margin: 0;
-  }
+  width: 100%;
 }
 
 .addPropertyFormContainer .property-add .layout-holder .title {
-  max-width: 185px;
-  width: inherit;
-  float: none;
-  display: inline-block;
-  vertical-align: top;
+  float: left;
+  width: 25%;
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 1599px) {
   .addPropertyFormContainer .property-add .layout-holder .title {
-    max-width: 120px;
-  }
-}
-
-@media (max-width: 1023px) {
-  .addPropertyFormContainer .property-add .layout-holder .title {
-    max-width: 90px;
+    width: 33%;
   }
 }
 
 @media (max-width: 767px) {
   .addPropertyFormContainer .property-add .layout-holder .title {
-    max-width: inherit;
+    width: 100%;
+    display: block;
+    float: none;
+  }
+}
+
+.addPropertyFormContainer .property-add .layout-holder .input-holder {
+  float: right;
+}
+
+@media (max-width: 1599px) {
+  .addPropertyFormContainer .property-add .layout-holder .input-holder {
+    width: 67%;
+  }
+}
+
+@media (max-width: 767px) {
+  .addPropertyFormContainer .property-add .layout-holder .input-holder {
+    width: 100%;
+    display: block;
+    float: none;
   }
 }
 
 .addPropertyFormContainer .property-add .feature-blockOpener {
-  width: 260px;
   text-align: center;
   cursor: pointer;
   display: block;
@@ -2010,25 +1937,17 @@ input[type='submit'] {
   -ms-transition: color 0.4s ease, background 0.4s ease;
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 1599px) {
   .addPropertyFormContainer .property-add .feature-blockOpener {
-    margin: 0 18px 0 auto;
+    font-size: 13px;
+    line-height: 17px;
   }
 }
 
 @media (max-width: 1023px) {
   .addPropertyFormContainer .property-add .feature-blockOpener {
-    margin: 0 17px 0 auto;
     font-size: 12px;
     line-height: 15px;
-    width: 195px;
-  }
-}
-
-@media (max-width: 767px) {
-  .addPropertyFormContainer .property-add .feature-blockOpener {
-    width: 100%;
-    margin: 0;
   }
 }
 
@@ -2145,7 +2064,7 @@ input[type='submit'] {
 }
 
 .addPropertyFormContainer .feature-list li {
-  padding: 0 10px 15px;
+  padding: 0 10px 8px;
   width: 50%;
 }
 
