--- a/markup/includes/add-property-form.html
+++ b/markup/includes/add-property-form.html
@@ -142,8 +142,8 @@
             </div>
             <div class="layout add">
                 <div class="layout-holder add">
-                    <span class="title">Description of property:</span>
-                    <div class="input-holder">
+                    <span class="title less-width">Description:</span>
+                    <div class="input-holder add">
                         <textarea name="propertyDescription" ng-model="form.data.propertyDescription" placeholder="Please enter description"></textarea>
                         <span class="error-text">This is error</span>
                     </div>
