--- a/markup/scss/_add-property-form.scss
+++ b/markup/scss/_add-property-form.scss
@@ -16,10 +16,6 @@
 		@include media('<tablet'){
 			padding:10px 0 0;
 		}
-
-		textarea{
-			@include media('<desktop'){max-width: 350px !important;}
-		}
 	}
 	
 	.sideBar-active.sideBar-active & {
@@ -361,22 +357,6 @@
 			resize: none;
 			padding: 10px;
 			
-			@include media('<tvscreen'){
-				max-width: 650px;
-			}
-
-			@include media('<widescreen'){
-				max-width: 523px;
-			}
-			
-			@include media('<desktop'){
-				max-width: 610px;
-			}
-			@include media('<tablet'){
-				max-width: inherit;
-				margin: 0;
-			}
-			
 			&:hover{
 				border-color: $black;
 			}
@@ -648,6 +628,22 @@
 				float: left;
 				width: 25%;
 
+				&.less-width {
+					width: 12%;
+					
+					@include media('<tvscreen'){
+						width: 16%;
+					}
+					@include media('<desktop'){
+						width: 17%;
+					}
+					@include media('<tablet'){
+						width: 100%;
+						display: block;
+						float: none;
+					}
+				}
+
 				@include media('<tvscreen'){
 					width: 33%;
 				}
@@ -661,6 +657,23 @@
 			.input-holder{
 				float:right;
 				
+				&.add {
+					width: 88%;
+					padding: 0 0 0 8px;
+					
+					@include media('<tvscreen'){
+						width: 84%;
+					}
+					@include media('<desktop'){
+						width: 83%;
+					}
+					@include media('<tablet'){
+						width: 100%;
+						display: block;
+						float: none;
+					}
+				}
+
 				@include media('<tvscreen'){
 					width: 67%;
 				}
