--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -3836,6 +3836,8 @@ input[type='submit'] {
   padding: 9px 5px 6px 50px;
   overflow: auto;
   height: 100px;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 @media (max-width: 767px) {
