--- a/markup/scss/_user-registeration.scss
+++ b/markup/scss/_user-registeration.scss
@@ -290,6 +290,7 @@
             padding: 9px 5px 6px 50px;
             overflow: auto;
             height: 100px;
+            @include font(14,17);
             
             @include media('<tablet'){
                 height: 80px;
