--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -780,8 +780,11 @@ a{ outline: none;}
 				text-decoration: none;
 				color: $light-gray;
 				@include align-reset(middle,24,27);
+				cursor: pointer;
+				position: relative;
+				opacity: 0.4;
 				
-				&:hover{ color: $white;}
+				// &:hover{ color: $white;}
 
 				span[class^="icon-"], span[class*="icon-"]{
 					position: relative;
