--- a/markup/includes/fav-property-list.html
+++ b/markup/includes/fav-property-list.html
@@ -18,37 +18,6 @@
                             <option>10</option>
                         </select>
                     </li>
-                    <li>
-                        <label>listings per page from</label>
-                        <select>
-                            <option>Zain</option>
-                            <option>Nouman</option>
-                            <option>Waqas</option>
-                            <option>Sajid</option>
-                        </select>
-                    </li>
-                </ul>
-            </form>
-            <form class="by-id-sorting">
-                <ul>
-                    <li>
-                        <label>sorty by</label>
-                        <select>
-                            <option>ID</option>
-                            <option>Type</option>
-                            <option>Location</option>
-                            <option>Price</option>
-                            <option>Expiry</option>
-                            <option>Views</option>
-                        </select>
-                    </li>
-                    <li>
-                        <label>in</label>
-                        <select>
-                            <option>Descending</option>
-                            <option>Ascending</option>
-                        </select>
-                    </li>
                 </ul>
             </form>
         </div>
@@ -83,19 +52,7 @@
                     <div class="t-data by-view">55</div>
                     <div class="t-data">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
-                        <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#Alert" class="lightbox delete" title="Delete the property"><span class="icon-trash"></span></a>
-                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
-                        <div class="popup-holder">
-                            <div class="lightbox alert-modal" id="Alert">
-                                <span class="caution-heading"><span class="icon-warning"></span>Warning</span>
-                                <p>Are you sure, you want to delete this property?</p>
-                                <ul class="links">
-                                    <li><a href="#"><span class="icon-trash"></span>Delete this property</a></li>
-                                    <li><a href="#" class="close">cancle</a></li>
-                                </ul>
-                            </div>
-                        </div>
+                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
