--- a/markup/includes/pendingForAdmin-property-holder.html
+++ b/markup/includes/pendingForAdmin-property-holder.html
@@ -1,4 +1,4 @@
-<div class="favorite-property-holder">
+<div class="pendingForAdmin-property-holder">
     <div class="property-form-table">
         <div class="property-filter">
             <form class="by-user-sorting">
@@ -20,11 +20,11 @@
                     </li>
                 </ul>
             </form>
-        </div>
-        <div class="table-responsive">
             <ul class="quick-links">
                 <li><a href="#" class="delete"><span class="icon-bin"></span>Delete</a></li>
             </ul>
+        </div>
+        <div class="table-responsive">
             <ul class="properties-table accordion">
                 <li>
                     <div class="t-head by-id">
@@ -51,8 +51,9 @@
                     </div>
                     <div class="t-data by-view">55</div>
                     <div class="t-data">
+                        <a class="accept" title="Accept"><span class="icon-checkmark"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-sign"></span></a>
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
-                        <a href="#" class="delete" title="Delete the property"><span class="icon-trash"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
