--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -659,13 +659,14 @@ th {
 .property-listing-holder .properties-table, .changePassword-form .societiesBlock-listing,
 .changePassword-form .role-listing,
 .registration-form .societiesBlock-listing,
-.registration-form .role-listing, #sidebar-dashboard .notifications-links, #sidebar-dashboard .sideBar-links, #sidebar-dashboard .sideBar-links li .sub-links, .social-networks, .pager, #footer .cols-holder ul, .alert-modal .links {
+.registration-form .role-listing, .searchAbleCustom-select ul,
+.searchAbleCustom-select .list-container, #sidebar-dashboard .notifications-links, #sidebar-dashboard .sideBar-links, #sidebar-dashboard .sideBar-links li .sub-links, .social-networks, .pager, #footer .cols-holder ul, .alert-modal .links {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.clearfix:after, #header:after {
+.clearfix:after, .addPropertyFormContainer .property-add .layout.add:after, #header:after {
   content: '';
   display: block;
   clear: both;
@@ -1777,6 +1778,7 @@ input[type='submit'] {
 .addPropertyFormContainer .property-add .layout.add {
   max-width: 885px;
   margin: 0 auto;
+  overflow: visible;
 }
 
 @media (max-width: 1023px) {
@@ -2546,6 +2548,7 @@ input[type='submit'] {
   font-size: 0;
   line-height: 0;
   letter-spacing: -4px;
+  float: left;
 }
 
 .favorite-property-holder .quick-links > *,
@@ -2555,6 +2558,15 @@ input[type='submit'] {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0;
+}
+
+@media (max-width: 1199px) {
+  .favorite-property-holder .quick-links,
+  .property-listing-holder .quick-links {
+    float: none;
+    width: 100%;
+    display: block;
+  }
 }
 
 .favorite-property-holder .quick-links li,
@@ -2784,7 +2796,7 @@ input[type='submit'] {
   text-decoration: none;
 }
 
-@media (max-width: 1425px) {
+@media (max-width: 1599px) {
   .favorite-property-holder .listing-cetegories-links ul li a,
   .property-listing-holder .listing-cetegories-links ul li a {
     padding: 15px 18px;
@@ -3034,11 +3046,18 @@ input[type='submit'] {
   float: right;
 }
 
+@media (max-width: 1599px) {
+  .favorite-property-holder .property-filter .by-id-sorting,
+  .property-listing-holder .property-filter .by-id-sorting {
+    width: 35%;
+  }
+}
+
 @media (max-width: 1199px) {
   .favorite-property-holder .property-filter .by-id-sorting,
   .property-listing-holder .property-filter .by-id-sorting {
     padding: 0;
-    width: 46%;
+    width: 45%;
   }
 }
 
@@ -3433,6 +3452,11 @@ input[type='submit'] {
   .sideBar-active .favorite-property-holder {
     padding: 15px 10px 0;
   }
+}
+
+.sideBar-active .favorite-property-holder .by-user-sorting {
+  width: auto;
+  float: right;
 }
 
 .sideBar-active .favorite-property-holder .listing-cetegories-links ul {
@@ -4682,6 +4706,121 @@ input[type='submit'] {
     background-size: 24px 24px;
     /*The size of the normal image, half the size of the hi-res image*/
   }
+}
+
+.searchAbleCustom-select {
+  width: 100%;
+  display: block;
+  position: relative;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.searchAbleCustom-select.active .searchValue {
+  border-color: #000;
+  color: #000;
+}
+
+.searchAbleCustom-select.active .searchValue:after {
+  color: #000;
+}
+
+.searchAbleCustom-select.active ul,
+.searchAbleCustom-select.active .list-container {
+  display: block;
+}
+
+.searchAbleCustom-select .searchValue {
+  display: block;
+  font-size: 12px;
+  line-height: 15px;
+  width: 100%;
+  height: 30px;
+  width: 100%;
+  padding: 7px 30px 7px 10px;
+  border: 1px solid #999;
+  color: #999;
+  position: relative;
+  cursor: pointer;
+}
+
+.searchAbleCustom-select .searchValue:after {
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  content: "\e92c";
+  font-family: 'icomoon';
+  color: #999;
+  font-size: 18px;
+  line-height: 18px;
+  margin: -8px 0 0;
+}
+
+.searchAbleCustom-select .searchValue:active, .searchAbleCustom-select .searchValue:hover {
+  border-color: #000;
+  color: #000;
+}
+
+.searchAbleCustom-select .searchValue:active:after, .searchAbleCustom-select .searchValue:hover:after {
+  color: #000;
+}
+
+.searchAbleCustom-select ul,
+.searchAbleCustom-select .list-container {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  padding: 10px 5px 0;
+  background: #edf1f4;
+  z-index: 99;
+  display: none;
+}
+
+.searchAbleCustom-select ul li,
+.searchAbleCustom-select .list-container li {
+  display: block;
+  margin: 0 0 10px;
+}
+
+.searchAbleCustom-select .fake-label,
+.searchAbleCustom-select label {
+  display: block;
+  cursor: pointer;
+}
+
+.searchAbleCustom-select .fake-label:hover,
+.searchAbleCustom-select label:hover {
+  background: #39f;
+  color: #fff;
+}
+
+.searchAbleCustom-select .fake-label {
+  padding: 5px;
+}
+
+.searchAbleCustom-select input[type="radio"], .searchAbleCustom-select input[type="checkbox"] {
+  position: fixed;
+  top: -9999px;
+  left: -9999px;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.searchAbleCustom-select input[type="radio"]:checked ~ .fake-label, .searchAbleCustom-select input[type="checkbox"]:checked ~ .fake-label {
+  background: #39f;
+  color: #fff;
+}
+
+.searchAbleCustom-select .listDrop {
+  position: static;
+  padding: 0 5px;
+  max-height: 115px;
+  overflow: auto;
+}
+
+.searchAbleCustom-select .listDrop li {
+  margin: 0 0 3px;
 }
 
 .lightbox {
@@ -6152,6 +6291,15 @@ a {
   overflow: hidden;
   padding: 0 3px;
   text-align: left;
+}
+
+#footer .cols-holder .contact .success {
+  display: block;
+  text-align: center;
+  color: #58a36f;
+  font-size: 16px;
+  line-height: 20px;
+  padding: 5px;
 }
 
 #footer .cols-holder .contact .input-holder {
