--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -48,6 +48,8 @@ $media-expressions: (
 @import 'property-listing';
 @import 'user-registeration';
 @import 'fancybox';
+@import 'customSelect';
+
 .lightbox {
 	width: 100%;
 	max-width: 500px;
@@ -1172,6 +1174,14 @@ a{ outline: none;}
 			padding: 0 3px;
 			text-align: left;
 			
+			.success {
+				display: block;
+				text-align: center;
+				color: $green;
+				@include font(16,20);
+				padding: 5px;
+			}
+
 			.input-holder {
 				width: 100%;
 				margin: 0 0 10px;
@@ -1357,6 +1367,7 @@ a{ outline: none;}
 		}
 	}
 }
+
 @keyframes pagelodaer-progress{
 	0% { width: 0%; } 20% { width: 20%; } 40% { width: 40%; } 60% { width:  60%;} 100% { width: 100%;}
 }
