--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -118,20 +118,18 @@
                         <time datetime="2016-04-18">18 Apr 2016</time>
                     </div>
                     <div class="t-data by-view">55</div>
-                    <div class="t-data">
+                    <div class="t-data popup-holder">
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
-                        <a href="#Alert" class="lightbox delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="lightbox delete" title="Delete the property"><span class="icon-trash"></span></a>
                         <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
-                        <div class="popup-holder">
-                            <div class="lightbox alert-modal" id="Alert">
-                                <span class="caution-heading"><span class="icon-warning"></span>Warning</span>
-                                <p>Are you sure, you want to delete this property?</p>
-                                <ul class="links">
-                                    <li><a href="#"><span class="icon-trash"></span>Delete this property</a></li>
-                                    <li><a href="#" class="close">cancle</a></li>
-                                </ul>
-                            </div>
+                        <div class="popup alert-modal">
+                            <span class="caution-heading"><span class="icon-warning"></span>Warning</span>
+                            <p>Are you sure, you want to delete this property?</p>
+                            <ul class="links">
+                                <li><a href="#"><span class="icon-trash"></span>Delete this property</a></li>
+                                <li><a href="#" class="close">cancle</a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="slide">
