--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -49,15 +49,6 @@ $media-expressions: (
 @import 'user-registeration';
 @import 'fancybox';
 @import 'customSelect';
-
-.lightbox {
-	width: 100%;
-	max-width: 500px;
-	display: none;
-}
-.fancybox-title-float-wrap .child{
-	display: none;
-}
 html {
 	width: 100%;
 	height: 100%;
@@ -80,6 +71,10 @@ body {
 		opacity: 0;
 		visibility: hidden;
 		background: transparent;
+	}
+	&.popup-lock {
+		height: 100vh;
+		overflow: hidden;
 	}
 	&.loading-resources {
 		height: 100vh;
@@ -1174,14 +1169,6 @@ a{ outline: none;}
 			padding: 0 3px;
 			text-align: left;
 			
-			.success {
-				display: block;
-				text-align: center;
-				color: $green;
-				@include font(16,20);
-				padding: 5px;
-			}
-
 			.input-holder {
 				width: 100%;
 				margin: 0 0 10px;
@@ -1283,8 +1270,11 @@ a{ outline: none;}
 		}
 	}
 }
+.success-modal,
 .alert-modal {
 	width: 100%;
+	color: $black;
+	background: $white;
 
 	.caution-heading {
 		background: $red;
@@ -1306,7 +1296,8 @@ a{ outline: none;}
 	}
 	p{
 		display: block;
-		padding: 0 10px;
+		padding: 0 20px;
+		margin: 0 0 10px !important;
 	}
 	.links {
 		@extend %listreset;
@@ -1325,6 +1316,7 @@ a{ outline: none;}
 
 			&:first-child{
 				width: 75%;
+				background: transparent;
 				
 				@include media('<tablet'){
 					width: 100%;
@@ -1367,7 +1359,33 @@ a{ outline: none;}
 		}
 	}
 }
+.success-modal {
+	.caution-heading {background: $green;}
 
+	.links {
+		max-width: 100px;
+		margin: 0 auto !important;
+
+		li {
+			display: block;
+			width: 100%;
+
+			&:first-child {
+				width: 100%;
+
+				a {
+					background: $mix-blue;
+					border-color: $mix-blue;
+
+					&:hover {
+						background: darken($mix-blue, 10%);
+						border-color: darken($mix-blue, 10%);
+					}
+				}
+			}
+		}
+	}
+}
 @keyframes pagelodaer-progress{
 	0% { width: 0%; } 20% { width: 20%; } 40% { width: 40%; } 60% { width:  60%;} 100% { width: 100%;}
 }
@@ -1391,4 +1409,67 @@ a{ outline: none;}
 	-webkit-transition: none !important;
 	-moz-transition: none !important;
 	-ms-transition: none !important;
+}
+.popup-holder.active{
+
+	&:after {
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: 99999;
+		background: rgba($black, 0.7);
+		content: '';
+	}
+}
+.popup {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin: -110px 0 0 -250px;
+	z-index: 999999;
+	width: 500px;
+	text-align: left;
+	display: none;
+
+	&.less-indent {
+		margin: -300px 0 0 -250px;
+	}
+
+	@include media('<tablet'){
+		width: 300px;
+		margin: -140px 0 0 -150px;
+	}
+
+	.popup-holder.active &{
+		display: block;
+	}
+
+	.loginToContinue {
+		margin:70px 0 0;
+	}
+
+	.popup-close {
+		cursor: pointer;
+		color: $red !important;
+		position: absolute;
+		top: 0;
+		right: 5px;
+		text-decoration: none;
+		color: $white;
+		font-size: 30px;
+		line-height: 1;
+
+		&:after {
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background: rgba($black, 0.7);
+			content: '';
+			z-index: -1;
+		}
+	}
 }
